Finished Files Tab

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravelcollective/html": "5.5",
         "mortimer/rootrelativeurls": "dev-master",
         "mortimer/header-token-guard": "dev-master",
-        "aacotroneo/laravel-saml2": "dev-remove_mcrypt"
+        "aacotroneo/laravel-saml2": "dev-remove_mcrypt",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
