--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -31,10 +34,10 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "psr-0":{
+        "psr-0": {
             "Lavary\\Menu\\": "src/"
         },
-        "files":[
+        "files": [
             "app/helpers.php"
         ]
     },
