--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "mortimer/rootrelativeurls": "dev-master",
         "mortimer/header-token-guard": "dev-master",
         "aacotroneo/laravel-saml2": "dev-remove_mcrypt",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
